# AIsD

./: CMakeLists.txt  main.cpp
lab1/: lab1.A.cpp  lab1.B.cpp  lab1.C.cpp  lab1.D.cpp  lab1.E.cpp  lab1.F.cpp  lab1.G.cpp  lab1.H.cpp  lab1.I.cpp
lab2/: lab2.A.cpp  lab2.B.cpp  lab2.C.cpp  lab2.E.cpp  lab2.G.cpp
lab3/: lab3.A.cpp  lab3.B.cpp  lab3.C.cpp  lab3.E.cpp
lab4/: lab4.A.cpp  lab4.B.cpp  lab4.C.cpp  lab4.D.cpp  lab4.E.cpp  lab4.H.cpp
lab5/: lab5.A.cpp  lab5.B.cpp  lab5.C.cpp  lab5.D.cpp  lab5.E.cpp
lab7_1/: lab7_1.A.cpp  lab7_1.B.cpp  lab7_1.C.cpp  lab7_1.E.cpp  lab7_1.F.cpp  lab7_1.G.cpp  lab7_1.H.cpp  lab7_1.I.cpp  lab7_1.K.cpp  lab7_1.L.cpp
lab7_2/: lab7_2.A.cpp  lab7_2.B.cpp  lab7_2.D.cpp  lab7_2.E.cpp  lab7_2.G.cpp
lab8/: lab8.A.cpp  lab8.B.cpp  lab8.C.cpp  lab8.D.cpp
