cmake_minimum_required(VERSION 3.26)
project(AIsD)

set(CMAKE_CXX_STANDARD 17)

add_executable(AIsD main.cpp
        lab3/lab3.A.cpp
        lab3/lab3.B.cpp
        lab3/lab3.E.cpp
        lab3/lab3.C.cpp
        lab4/lab4.A.cpp
        lab4/lab4.B.cpp
        lab4/lab4.C.cpp
        lab4/lab4.E.cpp
        lab4/lab4.D.cpp
        lab4/lab4.H.cpp
        lab5/lab5.E.cpp
        lab5/lab5.D.cpp)
